Noissue - Fixed several small spacing irregularities in partial redesign

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -593,7 +593,7 @@ html[lang^="zh_"] #maxthon-notification
 
 #key-facts section h1
 {
-  margin-top: 0px;
+  margin: 0px;
 }
 
 #key-facts section .sprite
